[TASK][27018] User login

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -79,10 +79,11 @@ en:
       password: "Password"
       remember_me: "Remember me"
       submit: "Sign in"
-      or: "- OR -"
-      facebook_signup: "Sign in using Facebook"
-      google_signup: "Sign in using Gmail"
+      sign_in_with: "Or sign in with:"
+      facebook_signup: "Facebook"
+      google_signup: "Gmail"
       forgot_password: "I forgot my password"
       register: "Register a new membership"
     create:
+      login_success: "Login success!"
       invalid_login: "Invalid email/password combination."
