--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -79,10 +79,11 @@ vi:
       password: "Mật khẩu"
       remember_me: "Nhớ phiên đăng nhập"
       submit: "Đăng nhập"
-      or: "- HOẶC -"
-      facebook_signup: "Đăng nhập bằng Facebook"
-      google_signup: "Đăng nhập bằng Gmail"
+      sign_in_with: "hoặc đăng nhập với:"
+      facebook_signup: "Facebook"
+      google_signup: "Gmail"
       forgot_password: "Quên mật khẩu?"
       register: "Đăng ký thành viên mới"
     create:
+      login_success: "Đăng nhập thành công!"
       invalid_login: "Email hoặc mật khẩu không hợp lệ."
