--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -12,10 +12,11 @@ vi:
       messages: tin nhắn
       see_all_notifications: Xem tất cả thông báo
       profile: Hồ sơ
-      languages: Ngôn ngữ
       settings: Cài đặt
       logout: Đăng xuất
       login: Đăng nhập
+      english_html: '<i class="flag-icon flag-icon-us mr-2"></i> Tiếng Anh'
+      vietnamese_html: '<i class="flag-icon flag-icon-vn mr-2"></i> Tiếng Việt'
     sidebar:
       contracts: Hợp đồng
       slots: Khu vực
@@ -87,3 +88,5 @@ vi:
     create:
       login_success: "Đăng nhập thành công!"
       invalid_login: "Email hoặc mật khẩu không hợp lệ."
+    destroy:
+      logout_success: "Đăng xuất thành công!"
